  that the data received matches the ETag MD5 hash value provided by
  S3. JetS3t's applications, and any third-party clients that use 
  this method, will therefore get automatic data verificaiton of
  downloads similar to that provided (in most cases) for uploads.
- Removed methods incompatible with JDK version 1.4.

  * CloudFront Service

- Fixed bug parsing that prevented AWS Account Numbers from 
  being parsed from XML responses into a DistributionConfig object.

COCKPIT

- Fixed bug that caused Cockpit to create buckets in the US Standard 
  location regardless of the location selected by the user.

SYNCHRONIZE

- When an encryption password or credentials file password must be
  entered by a user at the command prompt the characters are no
  longer echoed to standard output when run on JDK 1.6 or greater.

KUDOS TO:

Bennett Hiles for echo-less password input for Synchronize and
removal of methods incompatible with JDK 1.4.

-------------
Version 0.7.2
-------------

TOOLKIT

  * General

- Added support for private and streaming CloudFront distributions (see 
  the "CloudFront Service" section below)
- Changed default thread and connection count settings to improve 
  reliability when tranferring many large files and performance when 
  performing object administration tasks. Default property settings for 
  maximum simultaneous admin threads and HTTP connections are increased 
  from 10 to 20, while the default number of non-admin threads is reduced 
  from 4 to 2. 
- Improved compatibility with other S3 tools by setting the following
  properties to true by default: 
  "filecomparer.ignore-panic-dir-placeholders"
  "filecomparer.ignore-s3organizer-dir-placeholders"
- Added new property "filecomparer.ignore-s3organizer-dir-placeholders"
  which allows JetS3t to ignore directory place-holder objects created
  by the S3 Organizer Firefox extension when uploading or downloading
  files.